--- a/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navbar-top.jspf
+++ b/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navbar-top.jspf
@@ -1,7 +1,7 @@
 <%@ taglib prefix="c" uri="jakarta.tags.core" %>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">File Tracker</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,28 +9,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="/departments">Departments</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action was here used at the time of this </a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link" href="/users">Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="/files">Files</a>
                 </li>
+<%--                <li class="nav-item dropdown">--%>
+<%--                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"--%>
+<%--                       aria-expanded="false">--%>
+<%--                        Admin--%>
+<%--                    </a>--%>
+<%--                    <ul class="dropdown-menu">--%>
+<%--                        <li><a class="dropdown-item" href="/departments">Departments</a></li>--%>
+<%--                        <li><a class="dropdown-item" href="/users">Users</a></li>--%>
+<%--                        <li>--%>
+<%--                            <hr class="dropdown-divider">--%>
+<%--                        </li>--%>
+<%--                        <li><a class="dropdown-item" href="#">Something else here</a></li>--%>
+<%--                    </ul>--%>
+<%--                </li>--%>
+<%--                <li class="nav-item">--%>
+<%--                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>--%>
+<%--                </li>--%>
             </ul>
             <div class="d-flex me-2">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -40,7 +43,7 @@
                             ${sessionScope.fullNames}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
+<%--                            <li><a class="dropdown-item" href="#">Profile</a></li>--%>
                             <li><a class="dropdown-item" href="${pageContext.request.contextPath}/logout">Logout</a></li>
                         </ul>
                     </li>
