--- a/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navbar-top.jspf
+++ b/src/main/resources/META-INF/resources/WEB-INF/jsp/common/navbar-top.jspf
@@ -9,6 +9,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/settings">Settings</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/departments">Departments</a>
                 </li>
                 <li class="nav-item">
