--- a/src/main/resources/templates/auth/new-password.html
+++ b/src/main/resources/templates/auth/new-password.html
@@ -13,6 +13,9 @@
         <div class="col">
             <h6><u>Reset Password</u></h6>
             <div th:if="${param.error}" class="alert alert-danger" th:text="${param.error}"></div>
+            <p>Scan the QrCode below with an authenticator app such as <a target="_blank" href="https://authy.com/">Authy</a>. Its required when signing in!</p>
+            <img th:src="'data:image/png;base64,' + ${qrCodeBase64}" alt="QR Code">
+            <br/>
             <form th:action="@{/new-password}" method="post">
                 <input type="hidden" name="token" th:value="${param.token}"/>
                 <div class="form-floating mb-3">
@@ -20,7 +23,8 @@
                     <label for="password">Password</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" minlength="6" required/>
+                    <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
+                           minlength="6" required/>
                     <label for="confirmPassword">Confirm Password</label>
                 </div>
                 <div class="form-group d-grid gap-2">
